infrastructure/realms/overlays/k3d-dev/traefik-forward-auth-legacy/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-realm-operator-traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: auth.k3d-dev.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth-svc
            port:
              number: 80
  tls:
  - hosts:
    - auth.k3d-dev.lessingstrasse.org
    secretName: auth.k3d-dev.lessingstrasse.org
